cabal-version:      3.0
name:               a
version:            0.1.0.0
license:            MIT
author:             Michael Kriese
maintainer:         michael.kriese@visualon.de
category:           Testing
build-type:         Simple

common warnings
    ghc-options: -Wall

executable a
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4 && <5
    hs-source-dirs:   app
    default-language: Haskell2010
