
[tool.poetry]
name = "containerbase-test"
version = "0.2.1"
description = "Testing"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">3.9,<3.11"
numpy = "^1.21.3"
PyYAML = "^5.1"
pampy = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
mock = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
