
[tool.poetry]
name = "containerbase-test"
version = "0.2.1"
description = "Testing"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">3.13"
numpy = "^1.21.3"
PyYAML = "^6.0.1"
pampy = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mock = "^3.0"
atomicwrites = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
