[project]
name = "containerbase-test"
version = "0.2.1"
description = "Testing"
authors = []
license = "MIT"
requires-python = ">= 3.8"

[tool.rye.dependencies]
python = ">3.9"
numpy = "^1.21.3"
PyYAML = "^6.0.1"
pampy = "^0.2.1"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "mock>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
